fixed z-index e mediaquery del header

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ footer {
     background-color: #2c3e50;
 }
 
+.display-none {
+    display: none;
+}
+
 /* Header */
 header {
     background-color: #2c3e50; 
@@ -18,6 +22,7 @@ header {
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 1;
 }
 
 .fa-bars {
@@ -36,10 +41,19 @@ fa-star {
     color: white;
 }
 
-header h6 {
+header h4 {
     line-height: 70px;
 }
 
+@media screen and (min-width: 576px) {
+    .fa-bars {
+        display: none;
+    }
+    header .display-none {
+        display: inline-block;
+        line-height: 70px;
+    }
+}
 /* Main */
 .section-start,
 .section-about {
